# v4l2loopback-rs

./: .gitmodules  Cargo.toml  LICENSE.txt  README.md  build.rs
src/: lib.rs
