[package]
name = "v4l2loopback"
description = "Safe bindings to v4l2loopback"
version = "0.1.0"
edition = "2021"
authors = ["Syudagye <syudagye@gmail.com>"]
repository = "https://github.com/Syudagye/v4l2loopback-rs"
license = "MIT"
keywords = ["v4l2", "v4l2loopback"]
categories = ["api-bindings"]

[build-dependencies]
bindgen = "0.65.1"

[dependencies]
nix = { version = "0.26.2", default-features = false, features = ["ioctl"] }
thiserror = "1.0.40"
